# efs-zeropilot-3.0

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  CMakeLists.txt.old  Dockerfile  README.md  build.Dockerfile  build.bash  flash.Dockerfile  main.c  main.cpp
.github/: pull_request_template.md
.github/workflows/: compile.yaml  test-build.yaml  unit_test.yaml
AttitudeManager/: AM.md  readme.md
AttitudeManager/ControlAlgorithms/Inc/: AM_ControlInterface.hpp  AM_FixedControl.hpp  AM_FixedManualControl.hpp  AM_LevelQuadControl.hpp
AttitudeManager/ControlAlgorithms/Src/: AM_FixedControl.cpp  AM_FixedManualControl.cpp  AM_LevelQuadControl.cpp
AttitudeManager/CtrlAlgo/Inc/: AM_ControlInterface.hpp  AM_FixedControl.hpp  AM_LevelQuadControl.hpp
AttitudeManager/Inc/: AM.hpp  AM_DataTypes.hpp  AM_Interface.h  AM_StateManager.hpp  AM_States.hpp  PID.hpp
AttitudeManager/Src/: AM.cpp  AM.cppx  AM_Interface.cpp  AM_States.cpp  PID.cpp
AttitudeManager/tests/: ExampleTest.cpp  todo.txt
Common/: AM_datatypes.hpp  PM_datatypes.hpp  SM_datatypes.hpp
Common/Inc/: AM_datatypes.hpp  CommonDataTypes.hpp  GlobalFlag.hpp  MathConstants.h  PM_datatypes.hpp  SM_datatypes.hpp  assert.h  zp_assert.h
Common/Src/: GlobalFlag.cpp  assert.c  zp_assert.c
PathManager/Inc/: PM.hpp  PM_CommsWithAM.hpp  PM_CommsWithSM.hpp  PM_CruisingStateManager.hpp  PM_DataTypes.hpp  PM_LandingTakeoffManager.hpp  PM_StateManager.hpp  PM_States.hpp
PathManager/Src/: PM.cpp  PM_CommsWithAM.cpp  PM_CommsWithSM.cpp  PM_CruisingStateManager.cpp  PM_Interface.cpp  PM_LandingTakeoffManager.cpp  PM_States.cpp  PM_Waypoint.cpp
PathManager/tests/: CruisingStateManagerTest.cpp  WaypointTest.cpp
SystemManager/Inc/: SM.hpp  SM_DataTypes.hpp  SM_StateManager.hpp  SM_States.hpp
SystemManager/Src/: SM.cpp  SM.cppx  SM_States.cpp
SystemManager/tests/: ExampleTest.cpp
TelemetryManager/: README.md
TelemetryManager/Inc/: CRC32.hpp  Circular_Queue.hpp  Messages.hpp  TM.hpp  TM_interface.h  helper.template
TelemetryManager/Inc/Msgs/: GroundStation.lcm  common.lcm  jetson.lcm
TelemetryManager/Inc/helpers/: GroundStationData_helper.hpp  GroundStationDisarm_helper.hpp  GroundStationPIDSetResponse_helper.hpp  GroundStationPIDValues_helper.hpp  GroundStationWaypoints_helper.hpp  JetsonLandingInitiationCommand_helper.hpp  JetsonMovementRequest_helper.hpp  JetsonOdometryData_helper.hpp  JetsonRelativeMovementCommand_helper.hpp
TelemetryManager/Inc/messages/: GroundStationData.hpp  GroundStationDisarm.hpp  GroundStationPIDSetResponse.hpp  GroundStationPIDValues.hpp  GroundStationWaypoints.hpp  Header.hpp  JetsonLandingInitiationCommand.hpp  JetsonMovementRequest.hpp  JetsonOdometryData.hpp  JetsonRelativeMovementCommand.hpp  PIDController.hpp  PIDValues.hpp  SensorData.hpp  Waypoint.hpp
TelemetryManager/Src/: CRC32.cpp  TM.cpp  TM_interface.cpp  TM_test.cpp  TM_test.txt
TelemetryManager/Tools/: build_test.sh  gen_helpers.py  message_include.sh
TelemetryManager/tests/: ExampleTest.cpp  example_test.cpp
Tools/: build-docker-windows.ps1  build-docker.bash  build.bash  build_messages.sh
testing/: CMakeLists.txt  Dockerfile  install-google-test.bash  test.bash
